# anomyous-website

./: .env.example  .gitignore  HF_README.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
benchmarks/: task.md  task.score
benchmarks/ade20k/: task.yaml
benchmarks/aime_math_rl/: task.yaml
benchmarks/assist2009_kt/: task.yaml
benchmarks/asvspoof2021_la/: task.yaml
benchmarks/bigcodebench_codegen/: task.yaml
benchmarks/cifar100lt/: task.yaml
benchmarks/cifar100n/: task.yaml
benchmarks/climsim_lowres/: task.yaml
benchmarks/clotho_caption/: task.yaml
benchmarks/cogniplan/: task.yaml
benchmarks/crohme_hmer/: task.yaml
benchmarks/div2k_sr_x4/: task.yaml
benchmarks/domainnet_quickdraw/: task.yaml
benchmarks/etth1_forecasting/: task.yaml
benchmarks/flip_aav/: task.yaml
benchmarks/habitat3/: task.yaml
benchmarks/humanoidbench/: task.yaml
benchmarks/iwildcam_wilds/: task.yaml
benchmarks/ljspeech_tts/: task.yaml
benchmarks/metrla_traffic/: task.yaml
benchmarks/minigrid/: task.yaml
benchmarks/objaverse_3dgen/: task.yaml
cli/: dashboard.py  demo.py  main.py  results.py  tasks.py
docker/: Dockerfile.base  Dockerfile.base.py312
docs/: index.html
farbench/: __init__.py  agent.py  agent_prompt.py  constants.py  env.py  eval_harness.py  evaluator.py  orchestrator.py  runner.py  schemas.py  storage.py  tasks.py  tracker.py  utils.py
gui/: agent_workflow_demo.json  dashboard.html  dashboard_api.py
scripts/: README.md  run.sh
temp_tools/: export_static_dashboard.py  gen_domain_composition.py
(+23544 files in other folders)
