[project]
name = "farbench"
version = "3.0.0"
description = "Benchmark for evaluating autonomous AI agents on ML research tasks"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "psutil>=5.9",
    "docker>=6.0",
    "huggingface_hub>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py"]
dashboard = ["fastapi", "uvicorn"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
farbench = "cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["farbench*", "cli*", "gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]  # recreate tests/ when ready
